wxc/include/ewxw/wxc_glue.h

/* wxListCtrl */
TClassDefExtend(wxListCtrl,wxControl)
TBoolInt   wxListCtrl_Arrange( TSelf(wxListCtrl) _obj, int flag );
void       wxListCtrl_ClearAll( TSelf(wxListCtrl) _obj );
TClass(wxListCtrl) wxListCtrl_Create( TClass(wxWindow) _prt, int _id, TRect(_lft,_top,_wdt,_hgt), int _stl );
TBoolInt   wxListCtrl_DeleteAllColumns( TSelf(wxListCtrl) _obj );
TBoolInt   wxListCtrl_DeleteAllItems( TSelf(wxListCtrl) _obj );
TBoolInt   wxListCtrl_DeleteColumn( TSelf(wxListCtrl) _obj, int col );
TBoolInt   wxListCtrl_DeleteItem( TSelf(wxListCtrl) _obj, int item );
void       wxListCtrl_EditLabel( TSelf(wxListCtrl) _obj, int item );
TBoolInt   wxListCtrl_EndEditLabel( TSelf(wxListCtrl) _obj, int cancel );
TBoolInt   wxListCtrl_EnsureVisible( TSelf(wxListCtrl) _obj, int item );
int        wxListCtrl_FindItem( TSelf(wxListCtrl) _obj, int start, TStringVoid str, TBoolInt partial );
int        wxListCtrl_FindItemByData( TSelf(wxListCtrl) _obj, int start, int data );
int        wxListCtrl_FindItemByPosition( TSelf(wxListCtrl) _obj, int start, TPoint(x,y), int direction );
TBoolInt   wxListCtrl_GetColumn( TSelf(wxListCtrl) _obj, int col, TClass(wxListItem) item );
int        wxListCtrl_GetColumnCount( TSelf(wxListCtrl) _obj );
int        wxListCtrl_GetColumnWidth( TSelf(wxListCtrl) _obj, int col );
int        wxListCtrl_GetCountPerPage( TSelf(wxListCtrl) _obj );
TClass(wxTextCtrl)  wxListCtrl_GetEditControl( TSelf(wxListCtrl) _obj );
TClass(wxImageList) wxListCtrl_GetImageList( TSelf(wxListCtrl) _obj, int which );
TBoolInt   wxListCtrl_GetItem( TSelf(wxListCtrl) _obj, TClass(wxListItem) info );
int        wxListCtrl_GetItemCount( TSelf(wxListCtrl) _obj );
int        wxListCtrl_GetItemData( TSelf(wxListCtrl) _obj, int item );
TBoolInt   wxListCtrl_GetItemPosition( TSelf(wxListCtrl) _obj, int item, int*x, int* y );
int        wxListCtrl_GetItemRect( TSelf(wxListCtrl) _obj, int item, int code, TRectOutVoid(x,y,w,h) );
int        wxListCtrl_GetItemSpacing( TSelf(wxListCtrl) _obj, TBool isSmall );
int        wxListCtrl_GetItemState( TSelf(wxListCtrl) _obj, int item, int stateMask );
TStringLen wxListCtrl_GetItemText( TSelf(wxListCtrl) _obj, int item, TStringOutVoid buf );
int        wxListCtrl_GetNextItem( TSelf(wxListCtrl) _obj, int item, int geometry, int state );
int        wxListCtrl_GetSelectedItemCount( TSelf(wxListCtrl) _obj );
void       wxListCtrl_GetTextColour( TSelf(wxListCtrl) _obj, TClassRef(wxColour) _ref );
int        wxListCtrl_GetTopItem( TSelf(wxListCtrl) _obj );
int        wxListCtrl_HitTest( TSelf(wxListCtrl) _obj, TPoint(x,y), void* flags );
int        wxListCtrl_InsertColumn( TSelf(wxListCtrl) _obj, int col, TStringVoid heading, int format, int width );
int        wxListCtrl_InsertColumnFromInfo( TSelf(wxListCtrl) _obj, int col, TClass(wxListItem) info );
int        wxListCtrl_InsertItem( TSelf(wxListCtrl) _obj, TClass(wxListItem) info );
int        wxListCtrl_InsertItemWithData( TSelf(wxListCtrl) _obj, int index, TStringVoid label );
int        wxListCtrl_InsertItemWithImage( TSelf(wxListCtrl) _obj, int index, int imageIndex );
int        wxListCtrl_InsertItemWithLabel( TSelf(wxListCtrl) _obj, int index, TStringVoid label, int imageIndex );
TBoolInt   wxListCtrl_ScrollList( TSelf(wxListCtrl) _obj, TVector(dx,dy) );
void       wxListCtrl_SetBackgroundColour( TSelf(wxListCtrl) _obj, TClass(wxColour) col );
TBoolInt   wxListCtrl_SetColumn( TSelf(wxListCtrl) _obj, int col, TClass(wxListItem) item );
TBoolInt   wxListCtrl_SetColumnWidth( TSelf(wxListCtrl) _obj, int col, int width );
int        wxListCtrl_SetForegroundColour( TSelf(wxListCtrl) _obj, TClass(wxColour) col );
void       wxListCtrl_SetImageList( TSelf(wxListCtrl) _obj, TClass(wxImageList) imageList, int which );
TBoolInt   wxListCtrl_SetItem( TSelf(wxListCtrl) _obj, int index, int col, TStringVoid label, int imageId );
TBoolInt   wxListCtrl_SetItemData( TSelf(wxListCtrl) _obj, int item, int data );
TBoolInt   wxListCtrl_SetItemFromInfo( TSelf(wxListCtrl) _obj, TClass(wxListItem) info );
TBoolInt   wxListCtrl_SetItemImage( TSelf(wxListCtrl) _obj, int item, int image, int selImage );
TBoolInt   wxListCtrl_SetItemPosition( TSelf(wxListCtrl) _obj, int item, TPoint(x,y) );
TBoolInt   wxListCtrl_SetItemState( TSelf(wxListCtrl) _obj, int item, int state, int stateMask );
void       wxListCtrl_SetItemText( TSelf(wxListCtrl) _obj, int item, TStringVoid str );
void       wxListCtrl_SetSingleStyle( TSelf(wxListCtrl) _obj, int style, TBoolInt add );
void       wxListCtrl_SetTextColour( TSelf(wxListCtrl) _obj, TClass(wxColour) col );
void       wxListCtrl_SetWindowStyleFlag( TSelf(wxListCtrl) _obj, int style );
TBoolInt   wxListCtrl_SortItems( TSelf(wxListCtrl) _obj, void* fn, void* eif_obj );
void       wxListCtrl_UpdateStyle( TSelf(wxListCtrl) _obj );
/* wxListItem */
TClassDefExtend(wxListItem,wxObject)
void       wxListItem_Clear( TSelf(wxListItem) _obj );
void       wxListItem_ClearAttributes( TSelf(wxListItem) _obj );
TClass(wxListItem) wxListItem_Create(  );
void       wxListItem_Delete( TSelf(wxListItem) _obj );
int        wxListItem_GetAlign( TSelf(wxListItem) _obj );
void*      wxListItem_GetAttributes( TSelf(wxListItem) _obj );
void       wxListItem_GetBackgroundColour( TSelf(wxListItem) _obj, TClassRef(wxColour) _ref );
int        wxListItem_GetColumn( TSelf(wxListItem) _obj );
int        wxListItem_GetData( TSelf(wxListItem) _obj );
void       wxListItem_GetFont( TSelf(wxListItem) _obj, TClassRef(wxFont) _ref );
int        wxListItem_GetId( TSelf(wxListItem) _obj );
int        wxListItem_GetImage( TSelf(wxListItem) _obj );
int        wxListItem_GetMask( TSelf(wxListItem) _obj );
int        wxListItem_GetState( TSelf(wxListItem) _obj );
TStringLen wxListItem_GetText( TSelf(wxListItem) _obj, TStringOutVoid _buf );
void       wxListItem_GetTextColour( TSelf(wxListItem) _obj, TClassRef(wxColour) _ref );
int        wxListItem_GetWidth( TSelf(wxListItem) _obj );
TBool      wxListItem_HasAttributes( TSelf(wxListItem) _obj );
void       wxListItem_SetAlign( TSelf(wxListItem) _obj, int align );
void       wxListItem_SetBackgroundColour( TSelf(wxListItem) _obj, TClass(wxColour) colBack );
void       wxListItem_SetColumn( TSelf(wxListItem) _obj, int col );
void       wxListItem_SetData( TSelf(wxListItem) _obj, int data );
void       wxListItem_SetDataPointer( TSelf(wxListItem) _obj, void* data );
void       wxListItem_SetFont( TSelf(wxListItem) _obj, TClass(wxFont) font );
void       wxListItem_SetId( TSelf(wxListItem) _obj, int id );
void       wxListItem_SetImage( TSelf(wxListItem) _obj, int image );
void       wxListItem_SetMask( TSelf(wxListItem) _obj, int mask );
void       wxListItem_SetState( TSelf(wxListItem) _obj, int state );
void       wxListItem_SetStateMask( TSelf(wxListItem) _obj, int stateMask );
void       wxListItem_SetText( TSelf(wxListItem) _obj, TStringVoid text );
void       wxListItem_SetTextColour( TSelf(wxListItem) _obj, TClass(wxColour) colText );
void       wxListItem_SetWidth( TSelf(wxListItem) _obj, int width );